--- a/apps/foodx/src/index.html
+++ b/apps/foodx/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Foodx</title>
+    <title>FoodX</title>
 
     <base href="/" />
 
